tests/cases/compiler-development/artifact/errors/diagnostic-generic-explicit-arity.diagnostic
diagnostic error code=T0001 family=type message="generic function 'identity' expects 1 type argument" sources=1 labels=2 notes=1 helps=1
  Source source_id=0 kind=file path="tests/cases/generics/errors/generic-explicit-arity.ari" display="tests/cases/generics/errors/generic-explicit-arity.ari" bytes=105
  Label index=0 role=primary source_id=0 source="tests/cases/generics/errors/generic-explicit-arity.ari" line=6 column=10 end_line=6 end_column=18 byte_start=79 byte_end=87 message=""
  Snippet label=0 text="  --> tests/cases/generics/errors/generic-explicit-arity.ari:6:10\n   |\n 6 |   return identity<i64, bool>(1);\n   |          ^^^^^^^^"
  Label index=1 role=secondary source_id=0 source="tests/cases/generics/errors/generic-explicit-arity.ari" line=1 column=13 end_line=1 end_column=14 byte_start=12 byte_end=13 message="function 'identity' declares 1 type parameter"
  Snippet label=1 text="  --> tests/cases/generics/errors/generic-explicit-arity.ari:1:13\n   |\n 1 | fn identity[T](value: T) -> T {\n   |             ^"
  Note index=0 location=none message="explicit type argument count must match the function generic parameter list"
  Help index=0 location=none message="pass 1 type argument to 'identity' instead of 2 type arguments"
